# lightgun_game

./: .gitignore  CMakeLists.txt  README.md  cmake-variants.yaml  raw_data.txt
cmake/: Findcpr.cmake  cli11.cmake  cpr.cmake  get_cpm.cmake  sdl2.cmake
inc/: DataAcqHTTP.h  DataAcqPlayback.h  DataAcqSim.h  Geometry.h  IDataAcq.h  LinAlgPointMapping.h  PointMapping.h  SafeDivide.h  Snapshot.h  consts.h  http_client.h  mapping_common.h  screen.h  util_concepts.h  utils.h
src/: DataAcqHTTP.cpp  DataAcqPlayback.cpp  DataAcqSim.cpp  Geometry.cpp  LinAlgPointMapping.cpp  PointMapping.cpp  Snapshot.cpp  http_client.cpp  main.cpp  mapping_common.cpp  screen.cpp
